--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,17 @@
+@font-face {
+  font-family: cyl;
+  src: url('/assets/fonts/generica.otf');
+}
+
+@font-face {
+  font-family: cylb;
+  src: url('/assets/fonts/generica_bold.otf');
+}
+
 .statusText {
+  font-family: cyl;
   color: #fff;
+  font-size: 18px;
 }
 
 .header-img {
