--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: cyl;
+    src: url('/assets/fonts/generica.otf');
+}
+
+@font-face {
+    font-family: cylb;
+    src: url('/assets/fonts/generica_bold.otf');
+}
 .app-dashboard {
     width: 100vw;
     height: 100vh;
