--- a/src/app/cdr/cdr.component.css
+++ b/src/app/cdr/cdr.component.css
@@ -1,20 +1,20 @@
 @font-face {
-    font-family: cylb;
-    src: url('/assets/fonts/generica_bold.otf');
-    /* src: url('/assets/fonts/c&lb.ttf'); */
+    font-family: cyl;
+    src: url('/assets/fonts/generica.otf');
 }
 
 @font-face {
     font-family: cylb;
-    src: url('/assets/fonts/generica.otf');
-    /* src: url('/assets/fonts/c&lb.ttf'); */
+    src: url('/assets/fonts/generica_bold.otf');
 }
 
 
 .no-cdr-container {
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .no-cdr-content {
     width: 500px;
@@ -40,8 +40,10 @@
 }
 
 .no-cdr-font {
-    font-family: cylb;
+    font-family: cyl;
     font-size: 40px;
+    height: 64px;
+    text-align: center;
 }
 
 .line {
@@ -92,18 +94,36 @@
 vaadin-date-picker {
     width: 100%;
 }
-
 table {
-    width: 90%;
+    width: 100%;
+    display:block;
 }
-
-table tbody tr {
-    height: 24px;
+thead {
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+}
+tbody {
+    height: 550px;
+    display: inline-block;
+    width: 100%;
+    overflow: auto;
 }
 
 input {
-    font-family: cylb;
+    font-family: cyl;
     font-size: 14px;
+}
+
+mfbootstrappaginator > mfpaginator > ul {
+    display: inline-block;
+}
+
+mfbootstrappaginator > mfpaginator > ul a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
 }
 
 .cdrHeader {
@@ -142,11 +162,34 @@ input {
 }
 
 .item-callerid {
-    font-family: cylb;
+    font-family: cyl;
     min-width: 150px;
     width: 50%;
     text-align: center;
+    font-size: 20px;
 }
+
+.item-callerdate {
+    font-family: cyl;
+    min-width: 90px;
+    width: 20%;
+    text-align: center;
+    font-size: 20px;
+}
+
+.item-callerdate  div {
+    width: 100%;
+    height: 32px;
+    border: 1px solid;
+    border-color: rgb(176,203,31);
+    border-radius: 15px;
+    padding-top: 5px;
+    padding-left: 5px;
+    text-align: left;
+    font-family: cyl;
+    font-size: 14px;
+}
+
 
 .header-name {
     min-width: 150px;
@@ -172,7 +215,7 @@ input {
 }
 
 .header-callerdate {
-    font-family: cylb;
+    font-family: cyl;
     min-width: 90px;
     width: 20%;
 }
@@ -204,25 +247,6 @@ input {
     font-size: 12px;
 }
 
-.item-callerdate {
-    font-family: cylb;
-    min-width: 90px;
-    width: 20%;
-    text-align: center;
-}
-
-.item-callerdate  div {
-    width: 100%;
-    height: 32px;
-    border: 1px solid;
-    border-color: rgb(176,203,31);
-    border-radius: 15px;
-    padding-top: 5px;
-    padding-left: 5px;
-    text-align: left;
-    font-family: cylb;
-    font-size: 14px;
-}
 
 .item-buscar {
     min-width: 68px;
@@ -278,7 +302,7 @@ input {
 }
 
 .item-filtro-borde input {
-    font-family: cylb;
+    font-family: cyl;
     font-size: 14px;
     width: 40%;
 
