--- a/src/app/conference/conference.component.css
+++ b/src/app/conference/conference.component.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: cyl;
+    src: url('/assets/fonts/generica.otf');
+}
+
+@font-face {
+    font-family: cylb;
+    src: url('/assets/fonts/generica_bold.otf');
+}
+
 .card {
     width: 100%;
 }
