--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -1,6 +1,27 @@
 @font-face {
+    font-family: cyl;
+    src: url('/assets/fonts/generica.otf');
+}
+
+@font-face {
     font-family: cylb;
-    src: url('/assets/fonts/c&lb.ttf');
+    src: url('/assets/fonts/generica_bold.otf');
+}
+
+table {
+    width: 100%;
+    display:block;
+}
+thead {
+    display: inline-block;
+    width: 100%;
+    height: 60px;
+}
+tbody {
+    height: 550px;
+    display: inline-block;
+    width: 100%;
+    overflow: auto;
 }
 
 .line {
@@ -84,14 +105,15 @@
 }
 
 .item-callerid {
-    font-family: cylb;
+    font-family: cyl;
+    font-size: 20px;
     min-width: 150px;
     width: 50%;
     text-align: left;
 }
 
 .header-callerdate {
-    font-family: cylb;
+    font-family: cyl;
     min-width: 90px;
     width: 20%;
 }
@@ -124,7 +146,7 @@
 }
 
 .item-callerdate {
-    font-family: cylb;
+    font-family: cyl;
     min-width: 90px;
     width: 20%;
     text-align: center;
@@ -139,7 +161,7 @@
     padding-top: 5px;
     padding-left: 5px;
     text-align: left;
-    font-family: cylb;
+    font-family: cyl;
     font-size: 14px;
 }
 
@@ -213,12 +235,12 @@
 
 
 .item-phone {
-    font-family: cylb;
+    font-family: cyl;
     font-size: 14px;
 }
 
 .mdl-textfield__input {
-    font-family: cylb;
+    font-family: cyl;
     font-size: 14px;
 }
 
