--- a/src/app/videoconference/videoconference.component.css
+++ b/src/app/videoconference/videoconference.component.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: cyl;
+  src: url('/assets/fonts/generica.otf');
+}
+
+@font-face {
+  font-family: cylb;
+  src: url('/assets/fonts/generica_bold.otf');
+}
+
+
 .mdl-button.mdl-button--twitter {
   color: #3f51b5;
 }
