--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -13,7 +13,7 @@
           <th colspan="2" width="50%">
             <div class="header-name">
               <div>
-                <mdl-textfield type="text" icon="search"></mdl-textfield>
+                <mdl-textfield type="text" icon="search" [(ngModel)]="_filter.cont_name"></mdl-textfield>
               </div>
               <div style="display:block; margin: auto;">
                 <img src="/mybc/assets/images/contactheader.svg">
@@ -45,7 +45,7 @@
           </tr>        
       </thead>
       <tbody>
-        <tr *ngFor="let contact of _contacts" class="item">
+        <tr *ngFor="let contact of _contacts | contactfilter:_filter" class="item">
           <td class="item-icon">
             <mdl-icon svgSrc="/mybc/assets/images/contactheader.svg" class="md-16"></mdl-icon>
           </td>
