--- a/src/app/identifier/identifier.component.css
+++ b/src/app/identifier/identifier.component.css
@@ -53,7 +53,7 @@
 }
 
 .mybc-login-forgot {
-    font-family: cylb;
+    font-family: cyl;
     font-size: 14px;
     color: white;
     text-decoration: underline;
